--- a/album.html
+++ b/album.html
@@ -74,6 +74,78 @@
             <img width="200" height="200"src="./img/Album/Avicii-9.jpg"" alt="">
           </td>
         </tr>
+
+        <tr>
+          <td>
+            <img width="200" height="200" src="./img/Album/Avicii-1.jpg" alt="">
+          </td>
+          <td>
+            <img width="200" height="200" src="./img/Album/Avicii-2.jpg"" alt="">
+          </td>
+          <td>
+            <img width="200" height="200" src="./img/Album/Avicii-3.jpg"" alt="">
+          </td>
+        </tr>
+
+        <tr>
+          <td>
+            <img  width="200" height="200" src="./img/Album/Avicii-4.jpg"" alt="">
+          </td>
+          <td>
+            <img width="200" height="200" src="./img/Album/Avicii-5.jpg"" alt="">
+          </td>
+          <td>
+            <img width="200" height="200" src="./img/Album/Avicii-6.jpg"" alt="">
+          </td>
+        </tr>
+
+        <tr>
+          <td>
+            <img width="200" height="200" src="./img/Album/Avicii-7.jpg"" alt="">
+          </td>
+          <td>
+            <img width="200" height="200"src="./img/Album/Avicii-8.jpg"" alt="">
+          </td>
+          <td>
+            <img width="200" height="200"src="./img/Album/Avicii-9.jpg"" alt="">
+          </td>
+        </tr>
+
+        <tr>
+          <td>
+            <img width="200" height="200" src="./img/Album/Avicii-1.jpg" alt="">
+          </td>
+          <td>
+            <img width="200" height="200" src="./img/Album/Avicii-2.jpg"" alt="">
+          </td>
+          <td>
+            <img width="200" height="200" src="./img/Album/Avicii-3.jpg"" alt="">
+          </td>
+        </tr>
+
+        <tr>
+          <td>
+            <img  width="200" height="200" src="./img/Album/Avicii-4.jpg"" alt="">
+          </td>
+          <td>
+            <img width="200" height="200" src="./img/Album/Avicii-5.jpg"" alt="">
+          </td>
+          <td>
+            <img width="200" height="200" src="./img/Album/Avicii-6.jpg"" alt="">
+          </td>
+        </tr>
+
+        <tr>
+          <td>
+            <img width="200" height="200" src="./img/Album/Avicii-7.jpg"" alt="">
+          </td>
+          <td>
+            <img width="200" height="200"src="./img/Album/Avicii-8.jpg"" alt="">
+          </td>
+          <td>
+            <img width="200" height="200"src="./img/Album/Avicii-9.jpg"" alt="">
+          </td>
+        </tr>
       </table>
     </div>
   </body>
