--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
       </p>
       <div class="imagenS">
         <img
-          width="1200"height="800"
+          width="1200"
+          height="800"
           src="./img/Avicii2.jpg"
           alt=""
           onclick="ClickFoto()"
